syntax = "proto3";

option java_package = "com.unknown.vigor.gateway.common.protobuf";

message SimpleEvent {
  string logId = 1;
  map<string, string> meta = 3;
  bytes data = 4;
  int64 ctime = 5;
}


message Response {
  StatusCode code = 1;
  string msg = 2;
  map<string, string> meta = 3;
}

enum StatusCode {
  NULL = 0;
  SUCCESS = 200;
  LOAD_FULL = 429;
  BAD_REQUEST = 400; // 不需要进行重试
}